--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link type = "text/css" rel = "stylesheet" href="./index.css"/>
 </head>
 <body>
-    <div class = "container d-flex justify-content-around">
+    <div class = "con d-flex justify-content-around">
         <div class = "first">
             <form>
                 <label for = "team"><h4>Team:</h4> </label>
