--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
             </form>
         </div>
          <div class = "vertical"></div>
-         <section class = "result">
-             <h1>Result</h1>
+         <section class = "result d-flex flex-column">
+             <div class = "pic">
+                <h1>Result</h1>
+             </div>
+             <div>
+                <div class = "result1"></div>
+             </div>
          </section>
     </div>
 
